--- a/about.html
+++ b/about.html
@@ -5,13 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- ABOUT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a> 
+            </li>
+            <li> 
+                <a href="menu.html">Menu</a>
+            </li>
+            <li> 
+                <a href="about.html">About</a>
+            </li>
+            <li> 
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <div id="banner">
+        <img alt="Banner logo" src="./assets/images/banner.png">
+    </div>
     <main>
         <!-- About page code here -->
+        <h1>About Us</h1>
+        <h2>Locations</h2>
+            <ul>
+                <li>Las Vegas, NV</li>
+                <li>Los Angeles, CA</li>
+                <li>Mexico City, MX</li>
+                <li>Culiacan, MX</li>
+            </ul>
+        <h2>Origin Story</h2>
+        <img src="./assets/images/about.jpg" alt="spices">
+        <p>Make up story about Origin of restaurant in random location.</p>
     </main>
 </body>
 </html>
